Fix preloader z-index

--- a/src/scss/preloader.scss
+++ b/src/scss/preloader.scss
@@ -11,6 +11,7 @@ body:has(.preloader--show) {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 9999;
   height: 100vh;
   width: 100%;
   background-color: #fff;
